Centering the image with background-position center top fixed the horizontal scrolling issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ ul#nav-list {
 
 .first {
   background-image: url('https://raycaruso.github.io/raisingigen/images/happy-family-green-overlay-darken-1200x800.png');
+  background-position: center top;
   background-size: cover;
   opacity: 0.5;
 }
@@ -220,8 +221,8 @@ section {
 
   .first {
     background-image: url('https://raycaruso.github.io/raisingigen/images/happy-family-green-overlay-darken-1430x2531.png');
-    background-size: cover;
-    opacity: 0.5;
+  /*  background-size: cover;
+    opacity: 0.5; */
   }
 
   .tag-line {
